2012-09-28  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* pthread.c: pulls all individual source modules into a single
	translation unit.
	* common.mk: Remove everything related to the non-inlined dll targets.
	This removes all the intermediate .c files that #include other .c files
	except for pthread.c.
	* Makefile: Remove and rename targets; remove or edit variables. All
	of this is to remove the intermediate translation unit aggregation
	source files.
	* GNUmakefile: Likewise.
	* attr.c: Removed.
	* barrier.c: Removed.
	* cancel.c: Removed.
	* condvar.c: Removed.
	* exit.c: Removed.
	* fork.c: Removed.
	* misc.c: Removed.
	* mutex.c: Removed.
	* nonportable.c: Removed.
	* private.c: Removed.
	* rwlock.c: Removed.
	* sched.c: Removed.
	* spin.c: Removed.
	* sync.c: Removed.
	* tsd.c: Removed.

2012-09-28  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* Makefile: expand on rudimentary install target; add DEST_LIB_NAME
	variable defaulting to "pthread.lib".
	* GNUmakefile: Add install target similar to Makefile with DEST_LIB_NAME
	defaulting to "libpthread.a".

2012-09-28  Daniel Richard. G <danielg at teragram dot com>

	* all: #include<config.h>; renamed HAVE_PTW32_CONFIG_H define in
	build files to HAVE_CONFIG_H since we no longer need a
	uniquely-named symbol for this.
	* Bmakefile: Removed _WIN32_WINNT assignment from build files since
	this is now handled in source.
	* Wmakefile: Likewise.
	* Makefile: Added mkdir invocations to "install" target.
	* common.mk: Elaborated the pthread.$(OBJEXT) dependency list.
	* pthread.h: Removed the #include"config.h" bit.

2012-09-23  Ross Johnson <ross dot johnson at homemail dot com dot au>

	* GNUmakefile: Modify "all-tests" to use new targets in tests
	GNUmakefile.
	* Makefile: Similarly.

2012-09-22  Daniel Richard. G <danielg at teragram dot com>

	* GNUmakefile: Reordered the command lines in the "help" target
	to match the ordering of the targets in the makefile, which IMO