@@ -56,7 +56,7 @@ main()
   if (CPU_COUNT(&threadCpus) > 1)
     {
 	  CPU_AND(&threadCpus, &threadCpus, &keepCpus);
-	  vThreadMask = SetThreadAffinityMask(GetCurrentThread(), (DWORD_PTR)threadCpus.cpuset /* Violating Opacity */);
+	  vThreadMask = SetThreadAffinityMask(GetCurrentThread(), (*(PDWORD_PTR)&threadCpus) /* Violating Opacity */);
 	  assert(pthread_setaffinity_np(self, sizeof(cpu_set_t), &threadCpus) == 0);
 	  vThreadMask = SetThreadAffinityMask(GetCurrentThread(), vThreadMask);
 	  assert(vThreadMask != 0);
